# riscos-allocate

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  riscos-allocate.py  riscos_allocate.py
.github/workflows/: build.yml
prminxml/: allocateformat.xml  riscos-allocate.xml
